<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="checkout_success">Checkout Success</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="ayam_bakar">Ayam Bakar</string>
    <string name="rp_price">Rp 20.000</string>
    <string name="total_price_cart">Total Price</string>
    <string name="price_cart">Rp 0</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="notes">notes</string>
    <string name="price_cart_list">Rp 20.000</string>
    <string name="quantity_cart">1</string>
    <string name="notes_cart">Catatan:</string>
    <string name="discount_30">Diskon 30%</string>
    <string name="disc_desc">Nikmati diskon tersebut!</string>
    <string name="user_greetings">Hai, Binarian</string>
    <string name="greetings">Mau makan Apa Hari Ini?</string>
    <string name="list_of_menu">List of Menu</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="shopping_sumary">Shopping Sumary</string>
    <string name="cash">Cash</string>
</resources>