<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.feature.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_username"
            android:layout_marginTop="76dp"
            android:src="@drawable/img_user_profile"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circularImageView"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImageView"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            android:layout_marginHorizontal="50dp"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:layout_marginHorizontal="50dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:layout_marginHorizontal="50dp"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone"
            android:layout_marginHorizontal="50dp"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            android:text="@string/save"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>