<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_item_menu"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:shapeAppearanceOverlay="@style/roundedMenuView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/vl_item_cart"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/ll_menu_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_item_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ic_delete_item">

        <TextView
            android:id="@+id/tv_menu_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title_profile" />

        <TextView
            android:id="@+id/tv_price_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_cart_list" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ic_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_item"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/vl_item_cart"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ic_minus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_minus" />

        <TextView
            android:id="@+id/tv_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/quantity_cart" />

        <ImageView
            android:id="@+id/ic_plus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_plus" />

    </LinearLayout>

    <View
        android:id="@+id/vl_item_cart"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#1A808080"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_item_menu"
        app:layout_constraintStart_toEndOf="@id/iv_item_menu"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/notes_cart"
        android:background="@color/grey"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toEndOf="@id/iv_item_menu"
        app:layout_constraintTop_toBottomOf="@id/vl_item_cart"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
